--- a/css/style.css
+++ b/css/style.css
@@ -7,3 +7,12 @@ ul.media li {
 img.poster {
 	height: 150px;
 }
+
+h4.name {
+	width: 150px;
+	margin-left: 15px;
+}
+
+.movieLink > p {
+	margin-left: 20px;
+}
