--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ ul.media li {
 #movieInfo > li {
     width: 30%;
     margin-left: 10%;
+    margin-top: 25px;
     display: inline-block;
     vertical-align: top;
 }
